added trending oi api